# imessage-analysis

./: .gitignore  CHATDB.md  COMPONENTS.md  DATA_ARCHITECTURE.md  DB_ANALYSIS.md  IMPROVEMENTS.md  LEARNINGS.md  LICENSE  MIGRATION.md  README.md  ROADMAP.md  STRUCTURE.md  analysis.py  config.py  init.sh  main.py  pyproject.toml  queries.py  requirements.txt  run.sh  setup.py  table_descriptions.md  tables_and_columns.md  test.sh  viz.py
app/db/: README.md  create_attachment.sql  create_chat.sql  create_chat_handle_join.sql  create_chat_message_join.sql  create_chat_recoverable_message_join.sql  create_deleted_messages.sql  create_full_schema.sql  create_handle.sql  create_kvtable.sql  create_message.sql  create_message_attachment_join.sql  create_message_processing_task.sql  create_recoverable_message_part.sql  create_sync_deleted_attachments.sql  create_sync_deleted_chats.sql  create_sync_deleted_messages.sql  create_unsynced_removed_recoverable_messages.sql
app/utils/: db.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/contacts/: ContactDetail.tsx  ContactsTable.tsx
frontend/src/components/diagnostics/: DiagnosticsPanel.tsx
frontend/src/components/latest/: MessageCard.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/overview/: SummaryCards.tsx  TopChatsTable.tsx
frontend/src/components/ui/: card.tsx
imessage_analysis/: __init__.py  analysis.py  api.py  config.py  database.py  logger_config.py  queries.py  snapshot.py  utils.py  visualization.py
imessage_analysis/etl/: __init__.py  extractors.py  identity.py  loaders.py  normalizers.py  pipeline.py  schema.py  validation.py
tests/: conftest.py  integration_logging.py  test_analysis.py  test_api_endpoints.py  test_api_import.py  test_config.py  test_contacts_extractors.py  test_contacts_integration.py  test_contacts_loaders.py  test_database.py  test_etl_integration.py  test_extractors.py  test_identity.py  test_identity_resolution.py  test_integration_expanded.py  test_loaders.py  test_logger_config.py  test_normalizers.py  test_pipeline.py  test_properties.py  test_queries.py  test_schema.py  test_snapshot.py  test_utils.py  test_visualization.py
